# phone-tools

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: tauri-release.yml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/appname/mac/en.lproj/: InfoPlist.strings
src-tauri/appname/mac/zh.lproj/: InfoPlist.strings
src-tauri/appname/windows/: installer.nsi
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  automation.rs  commands.rs  events.rs  hdc.rs  lib.rs  main.rs  state.rs  utils.rs
src-tauri/tools/: README.md
src-tauri/tools/macos/: libusb_shared.dylib
src/api/: adb.ts  adbQueue.ts  automation.ts  events.ts  screenStream.ts
src/components/: ConfirmDialog.tsx  ConnectionGuide.tsx  CoordInput.tsx  DeviceNotification.tsx  DeviceSelector.tsx  ErrorBoundary.tsx  InputDialog.tsx  InsertDataDialog.tsx  Layout.tsx  LoadingSpinner.tsx  PanelRefreshButton.tsx  ProgressBar.tsx  QueuePanel.tsx  RawDataDialog.tsx  ResultDialog.tsx  Sidebar.tsx
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/pages/: AppsPage.tsx  AutomationPage.tsx  DeviceControlPage.tsx  DeviceInfoPage.tsx  FpsMonitorPage.tsx  HomePage.tsx  InstallPage.tsx  MonitorPage.tsx  SettingsPage.tsx  TerminalPage.tsx  ToolsPage.tsx
src/store/: appStore.ts  appsStore.ts  automationStore.ts  deviceStore.ts
src/types/: automation.ts  index.ts
