[package]
name = "android-toolbox"
version = "1.0.0"
description = "Android Toolbox - Control Android phones via ADB"
authors = ["Android Toolbox"]
edition = "2021"

[lib]
name = "android_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
log = "0.4"
zip = "2"
